...
            android:src="@drawable/ic_calendar_white"
            />

        <TextView
            android:id="@+id/navigation_category"
            android:text="@string/btn_navigation_appointments"
            android:layout_above="@+id/add_btn"
            android:layout_marginBottom="50dp"
            style="@style/FragmentCategoryStyle"
            />

        <de.hdm.vergissmeinnicht.view.MainButton
            android:id="@+id/add_btn"
...
        android:layout_toRightOf="@+id/info_txt"
        android:padding="@dimen/default_container_padding"
        android:layout_weight="0.75"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            />

...
